--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -12,9 +12,9 @@
         <video-mode>PAL</video-mode>
         <consumers>
           <decklink>
-            <device>2</device>
+            <device>1</device>
+            <embedded-audio>true</embedded-audio>
           </decklink>
-          <system-audio />
         </consumers>
     </channel>
   </channels>
