--- a/common/common.vcxproj
+++ b/common/common.vcxproj
@@ -107,7 +107,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PreBuildEvent>
-      <Command>"$(SolutionDir)./gitrev.bat"</Command>
+      <Command>
+      </Command>
     </PreBuildEvent>
     <Lib />
   </ItemDefinitionGroup>
