--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -14,6 +14,7 @@
           <decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
+            <keyer>internal</keyer>
           </decklink>
         </consumers>
     </channel>
