Moved to VS2015 on old 2010 platform toolset

--- a/common/common.vcxproj.filters
+++ b/common/common.vcxproj.filters
@@ -166,5 +166,6 @@
     <ClInclude Include="memory\endian.h">
       <Filter>source\memory</Filter>
     </ClInclude>
+    <ClInclude Include="..\version.h" />
   </ItemGroup>
 </Project>
