fixed crash on XDCAM proxy files

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -14,12 +14,13 @@
   <channels>
     <channel>
         <video-mode>PAL</video-mode>
+        <channel-layout>stereo</channel-layout>
         <consumers>
           <decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
-            <buffer-depth>4</buffer-depth>
+            <!--<buffer-depth>4</buffer-depth>-->
           </decklink>
         </consumers>
     </channel>
