removed ffmpeg ogl consumer reference

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -16,12 +16,13 @@
         <video-mode>PAL</video-mode>
         <channel-layout>stereo</channel-layout>
         <consumers>
-          <decklink>
+          <!--<decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
-            <!--<buffer-depth>4</buffer-depth>-->
-          </decklink>
+            --><!--<buffer-depth>4</buffer-depth>--><!--
+          </decklink>-->
+          <screen />
         </consumers>
     </channel>
   </channels>
