--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -2,7 +2,7 @@
 <configuration>
   <log-level>info</log-level>
   <paths>
-    <media-path>media\</media-path>
+    <media-path>D:\Playout\AZCE\Media\</media-path>
     <log-path>log\</log-path>
     <data-path>data\</data-path>
     <template-path>templates\</template-path>
@@ -13,22 +13,21 @@
   </thumbnails>
   <channels>
     <channel>
-        <video-mode>PAL</video-mode>
+        <video-mode>1080i5000</video-mode>
         <channel-layout>stereo</channel-layout>
         <consumers>
-          <!--<decklink>
-            <device>1</device>
+          <decklink>
+            <device>2</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
-            --><!--<buffer-depth>4</buffer-depth>--><!--
-          </decklink>-->
-          <screen />
+            <buffer-depth>4</buffer-depth>-->
+          </decklink>
         </consumers>
     </channel>
   </channels>
   <controllers>
     <tcp>
-        <port>5251</port>
+        <port>5252</port>
         <protocol>AMCP</protocol>
     </tcp>
   </controllers>
