--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -2,7 +2,7 @@
 <configuration>
   <log-level>info</log-level>
   <paths>
-    <media-path>D:\Playout\AZCE\Media\</media-path>
+    <media-path>media\</media-path>
     <log-path>log\</log-path>
     <data-path>data\</data-path>
     <template-path>templates\</template-path>
@@ -13,7 +13,7 @@
   </thumbnails>
   <channels>
     <channel>
-        <video-mode>1080i5000</video-mode>
+        <video-mode>PAL</video-mode>
         <channel-layout>stereo</channel-layout>
         <consumers>
           <decklink>
