removed custom decklink allocator (as it consumes more memory than default)

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <log-level>info</log-level>
+  <log-level>trace</log-level>
   <paths>
     <media-path>media\</media-path>
     <log-path>log\</log-path>
@@ -13,7 +13,7 @@
   </thumbnails>
   <channels>
     <channel>
-        <video-mode>PAL</video-mode>
+        <video-mode>1080i5000</video-mode>
         <channel-layout>stereo</channel-layout>
         <consumers>
           <decklink>
@@ -78,7 +78,6 @@
                 <keyer>external [external|internal|default]</keyer>
                 <key-only>false [true|false]</key-only>
                 <buffer-depth>3 [1..]</buffer-depth>
-                <custom-allocator>true [true|false]</custom-allocator>
             </decklink>
             <blocking-decklink>
                 <device>[1..]</device>
@@ -86,7 +85,6 @@
                 <channel-layout>stereo [mono|stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
                 <keyer>external [external|internal|default]</keyer>
                 <key-only>false [true|false]</key-only>
-                <custom-allocator>true [true|false]</custom-allocator>
             </blocking-decklink>
             <bluefish>
                 <device>[1..]</device>
