--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -2,7 +2,7 @@
 <configuration>
   <log-level>trace</log-level>
   <paths>
-    <media-path>media\</media-path>
+    <media-path>d:\Playout\AZCE\Media</media-path>
     <log-path>log\</log-path>
     <data-path>data\</data-path>
     <template-path>templates\</template-path>
