--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -2,7 +2,7 @@
 <configuration>
   <log-level>trace</log-level>
   <paths>
-    <media-path>d:\Playout\AZCE\Media</media-path>
+    <media-path>media\</media-path>
     <log-path>log\</log-path>
     <data-path>data\</data-path>
     <template-path>templates\</template-path>
@@ -13,21 +13,21 @@
   </thumbnails>
   <channels>
     <channel>
-        <video-mode>1080i5000</video-mode>
+        <video-mode>PAL</video-mode>
         <channel-layout>stereo</channel-layout>
         <consumers>
           <decklink>
             <device>2</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
-            <buffer-depth>4</buffer-depth>-->
+            <!--<buffer-depth>4</buffer-depth>-->-->
           </decklink>
         </consumers>
     </channel>
   </channels>
   <controllers>
     <tcp>
-        <port>5252</port>
+        <port>5251</port>
         <protocol>AMCP</protocol>
     </tcp>
   </controllers>
