moved IMX (608 lines) image cropping to FFmpeg filter. Updated FFMpeg version

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -9,7 +9,13 @@
     <thumbnails-path>thumbnails\</thumbnails-path>
   </paths>
   <thumbnails>
-    <generate-thumbnails>false</generate-thumbnails>
+    <generate-thumbnails>true</generate-thumbnails>
+    <width>1024</width>
+    <height>576</height>
+    <video-grid>2</video-grid>
+    <scan-interval-millis>5000</scan-interval-millis>
+    <generate-delay-millis>2000</generate-delay-millis>
+    <video-mode>720p2500</video-mode>
   </thumbnails>
   <channels>
     <channel>
