--- a/modules/ffmpeg/ffmpeg.vcxproj.filters
+++ b/modules/ffmpeg/ffmpeg.vcxproj.filters
@@ -58,11 +58,11 @@
     <ClCompile Include="producer\muxer\frame_muxer.cpp">
       <Filter>source\producer\muxer</Filter>
     </ClCompile>
-    <ClCompile Include="producer\tbb_avcodec.cpp">
-      <Filter>source\producer</Filter>
-    </ClCompile>
     <ClCompile Include="producer\ffmpeg_producer.cpp">
       <Filter>source\producer</Filter>
+    </ClCompile>
+    <ClCompile Include="producer\tbb_avcodec.cpp">
+      <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -104,7 +104,7 @@
       <Filter>source\producer\muxer</Filter>
     </ClInclude>
     <ClInclude Include="producer\tbb_avcodec.h">
-      <Filter>source\producer</Filter>
+      <Filter>source</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
