added auto-playing decklink input for channel in caspar.config file

--- a/modules/ffmpeg/ffmpeg.vcxproj.filters
+++ b/modules/ffmpeg/ffmpeg.vcxproj.filters
@@ -61,7 +61,7 @@
     <ClCompile Include="producer\ffmpeg_producer.cpp">
       <Filter>source\producer</Filter>
     </ClCompile>
-    <ClCompile Include="producer\tbb_avcodec.cpp">
+    <ClCompile Include="tbb_avcodec.cpp">
       <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
@@ -103,7 +103,7 @@
     <ClInclude Include="producer\muxer\display_mode.h">
       <Filter>source\producer\muxer</Filter>
     </ClInclude>
-    <ClInclude Include="producer\tbb_avcodec.h">
+    <ClInclude Include="tbb_avcodec.h">
       <Filter>source</Filter>
     </ClInclude>
   </ItemGroup>
