--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -55,6 +55,9 @@
     <Filter Include="source\producer\media_info">
       <UniqueIdentifier>{7c832327-1c6a-4538-8ce8-553de2c4b5f0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="source\producer\output">
+      <UniqueIdentifier>{18f6a022-3b48-4a67-98cf-ca8950421d94}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="producer\transition\transition_producer.h">
@@ -178,6 +181,9 @@
     <ClInclude Include="producer\media_info\in_memory_media_info_repository.h">
       <Filter>source\producer\media_info</Filter>
     </ClInclude>
+    <ClInclude Include="producer\output\output_producer.h">
+      <Filter>source\producer\output</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="producer\transition\transition_producer.cpp">
@@ -279,6 +285,9 @@
     </ClCompile>
     <ClCompile Include="producer\media_info\in_memory_media_info_repository.cpp">
       <Filter>source\producer\media_info</Filter>
+    </ClCompile>
+    <ClCompile Include="producer\output\output_producer.cpp">
+      <Filter>source\producer\output</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
