UDP streaming is working

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -30,6 +30,21 @@
           </decklink>
         </consumers>
     </channel>
+    <channel>
+      <input>
+        <decklink>
+          <device>2</device>
+        </decklink>
+      </input>
+      <consumers>
+        <stream>
+          <path>udp://127.0.0.1:5554</path>
+          <acodec>aac</acodec>
+          <vcodec>libx264</vcodec>
+          <narrow>false</narrow>
+        </stream>
+      </consumers>
+    </channel>
   </channels>
   <controllers>
     <tcp>
@@ -114,14 +129,12 @@
                 <name>[Screen Consumer]</name>
                 <borderless>false [true|false]</borderless>
             </screen>
-            <newtek-ivga>
-              <channel-layout>stereo [mono|stereo|dts|dolbye|dolbydigital|smpte|passthru]</channel-layout>
-            </newtek-ivga>
-            <file>
-                <path></path>
-                <vcodec>libx264 [libx264|qtrle]</vcodec>
-                <separate-key>false [true|false]</separate-key>
-            </file>
+            <stream>
+              <path>udp://127.0.0.1:5554</path>
+              <acodec>aac</acodec>
+              <vcodec>libx264</vcodec>
+              <narrow>false</narrow>
+            </stream>
         </consumers>
     </channel>
 </channels>
