--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -31,6 +31,7 @@
         </consumers>
     </channel>
     <channel>
+      <video-mode>PAL</video-mode>
       <input>
         <decklink>
           <device>2</device>
