--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -31,18 +31,19 @@
         </consumers>
     </channel>
     <channel>
+      <video-mode>1080i5000</video-mode>
       <input>
         <decklink>
           <device>2</device>
         </decklink>
       </input>
       <consumers>
-        <stream>
+        <!--<stream>
           <path>udp://127.0.0.1:5554</path>
           <acodec>aac</acodec>
           <vcodec>libx264</vcodec>
           <narrow>false</narrow>
-        </stream>
+        </stream>-->
       </consumers>
     </channel>
   </channels>
