fixed memory leak

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -31,19 +31,21 @@
         </consumers>
     </channel>
     <channel>
-      <video-mode>1080i5000</video-mode>
+      <video-mode>PAL</video-mode>
       <input>
         <decklink>
           <device>2</device>
         </decklink>
       </input>
       <consumers>
-        <!--<stream>
+        <stream>
           <path>udp://127.0.0.1:5554</path>
           <acodec>aac</acodec>
           <vcodec>libx264</vcodec>
           <narrow>false</narrow>
-        </stream>-->
+          <options>coder=vlc</options>
+          <vrate>1024</vrate> <!--in kilobytes/s-->
+        </stream>
       </consumers>
     </channel>
   </channels>
