--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -45,6 +45,7 @@
           <narrow>false</narrow>
           <options>coder=vlc</options>
           <vrate>1024</vrate> <!--in kilobytes/s-->
+          <arate>128</arate>  <!--in kilobytes/s-->
         </stream>
       </consumers>
     </channel>
@@ -133,10 +134,13 @@
                 <borderless>false [true|false]</borderless>
             </screen>
             <stream>
-              <path>udp://127.0.0.1:5554</path>
-              <acodec>aac</acodec>
-              <vcodec>libx264</vcodec>
-              <narrow>false</narrow>
+              <path>udp://127.0.0.1:5554</path> - only udp is supported
+              <acodec>aac</acodec>              - FFmpeg codec 
+              <vcodec>libx264</vcodec>          - ...
+              <narrow>false</narrow>            - aspect ratio in SD mode
+              <options>coder=vlc</options>      - FFmpeg codecs and format specific options, name=value, comma as delimiter
+              <vrate>1024</vrate>               - video bitrate in kilobytes/s
+              <arate>128</arate>                - audio bitrate in kilobytes/s
             </stream>
         </consumers>
     </channel>
