--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -9,7 +9,7 @@
     <thumbnails-path>thumbnails\</thumbnails-path>
   </paths>
   <thumbnails>
-    <generate-thumbnails>true</generate-thumbnails>
+    <generate-thumbnails>false</generate-thumbnails>
     <width>1024</width>
     <height>576</height>
     <video-grid>2</video-grid>
@@ -50,6 +50,13 @@
       </consumers>
     </channel>
   </channels>
+  <recorders>
+    <decklink>
+      <device>2</device>
+      <preroll>3</preroll>
+      <offset>5</offset>
+    </decklink>
+  </recorders>
   <controllers>
     <tcp>
         <port>5251</port>
