--- a/core/core.vcxproj
+++ b/core/core.vcxproj
@@ -499,6 +499,7 @@
     <ClInclude Include="producer\media_info\in_memory_media_info_repository.h" />
     <ClInclude Include="producer\media_info\media_info.h" />
     <ClInclude Include="producer\media_info\media_info_repository.h" />
+    <ClInclude Include="recorder.h" />
     <ClInclude Include="thumbnail_generator.h" />
     <ClInclude Include="producer\layer\layer_producer.h" />
     <ClInclude Include="video_channel.h" />
@@ -633,6 +634,7 @@
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../../StdAfx.h</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">../../StdAfx.h</PrecompiledHeaderFile>
     </ClCompile>
+    <ClCompile Include="recorder.cpp" />
     <ClCompile Include="thumbnail_generator.cpp" />
     <ClCompile Include="producer\layer\layer_producer.cpp">
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Profile|Win32'">../../StdAfx.h</PrecompiledHeaderFile>
