--- a/core/core.vcxproj.filters
+++ b/core/core.vcxproj.filters
@@ -178,6 +178,9 @@
     <ClInclude Include="producer\media_info\in_memory_media_info_repository.h">
       <Filter>source\producer\media_info</Filter>
     </ClInclude>
+    <ClInclude Include="recorder.h">
+      <Filter>source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="producer\transition\transition_producer.cpp">
@@ -279,6 +282,9 @@
     </ClCompile>
     <ClCompile Include="producer\media_info\in_memory_media_info_repository.cpp">
       <Filter>source\producer\media_info</Filter>
+    </ClCompile>
+    <ClCompile Include="recorder.cpp">
+      <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
