frame timecode added, is passing through mixer, but FFmpeg throws exception on initialize

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -38,15 +38,15 @@
         </decklink>
       </input>
       <consumers>
-        <stream>
+        <!--<stream>
           <path>udp://127.0.0.1:5554</path>
           <acodec>aac</acodec>
           <vcodec>libx264</vcodec>
           <narrow>false</narrow>
           <options>coder=vlc</options>
-          <vrate>1024</vrate> <!--in kilobytes/s-->
-          <arate>128</arate>  <!--in kilobytes/s-->
-        </stream>
+          <vrate>1024</vrate> --><!--in kilobytes/s--><!--
+          <arate>128</arate>  --><!--in kilobytes/s--><!--
+        </stream>-->
       </consumers>
     </channel>
   </channels>
