--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -35,26 +35,26 @@
       <input>
         <decklink>
           <device>2</device>
+          <timecode-source>sdi</timecode-source>
         </decklink>
       </input>
       <consumers>
-        <!--<stream>
+        <stream>
           <path>udp://127.0.0.1:5554</path>
           <acodec>aac</acodec>
           <vcodec>libx264</vcodec>
           <narrow>false</narrow>
           <options>coder=vlc</options>
-          <vrate>1024</vrate> --><!--in kilobytes/s--><!--
-          <arate>128</arate>  --><!--in kilobytes/s--><!--
-        </stream>-->
+          <vrate>1024</vrate> <!--in kilobytes/s-->
+          <arate>128</arate>  --><!--in kilobytes/s-->
+        </stream>
       </consumers>
     </channel>
   </channels>
   <recorders>
     <decklink>
       <device>2</device>
-      <preroll>3</preroll>
-      <offset>5</offset>
+      <preroll>1</preroll>
     </decklink>
   </recorders>
   <controllers>
@@ -150,6 +150,12 @@
               <arate>128</arate>                - audio bitrate in kilobytes/s
             </stream>
         </consumers>
+        <input>
+           <decklink>
+              <device>2</device>
+              <timecode-source>serial [serial|sdi|vitc]</timecode-source>
+           </decklink>
+      </input>
     </channel>
 </channels>
 <osc>
