added INFO RECORDERS sub-command

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -40,11 +40,11 @@
       </input>
       <consumers>
         <stream>
-          <path>udp://127.0.0.1:5554</path>
+          <path>udp://224.0.0.1:5554</path>
           <acodec>aac</acodec>
           <vcodec>libx264</vcodec>
           <narrow>false</narrow>
-          <options>coder=vlc</options>
+          <options>tune=zerolatency,preset=veryfast</options>
           <vrate>1024</vrate> <!--in kilobytes/s-->
           <arate>128</arate>  --><!--in kilobytes/s-->
         </stream>
@@ -63,6 +63,9 @@
         <protocol>AMCP</protocol>
     </tcp>
   </controllers>
+  <osc>
+    <default-port>6250</default-port>
+  </osc>
 </configuration>
 
 <!--
