added RECORDER osc support

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -33,6 +33,7 @@
     <channel>
       <video-mode>PAL</video-mode>
       <input>
+        <layer>1</layer>
         <decklink>
           <device>2</device>
           <timecode-source>sdi</timecode-source>
@@ -154,6 +155,7 @@
             </stream>
         </consumers>
         <input>
+           <layer>[0..]</layer>
            <decklink>
               <device>2</device>
               <timecode-source>serial [serial|sdi|vitc]</timecode-source>
