fixed capture with serial timecode source

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -36,7 +36,7 @@
         <layer>1</layer>
         <decklink>
           <device>2</device>
-          <timecode-source>sdi</timecode-source>
+          <timecode-source>serial</timecode-source>
         </decklink>
       </input>
       <consumers>
@@ -56,6 +56,7 @@
     <decklink>
       <device>2</device>
       <preroll>1</preroll>
+      <offset>-3</offset>
     </decklink>
   </recorders>
   <controllers>
