recording fixed when GetTimecode fails

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -47,7 +47,7 @@
           <narrow>false</narrow>
           <options>tune=zerolatency,preset=veryfast</options>
           <vrate>1024</vrate> <!--in kilobytes/s-->
-          <arate>128</arate>  --><!--in kilobytes/s-->
+          <arate>128</arate>  <!--in kilobytes/s-->
         </stream>
       </consumers>
     </channel>
@@ -56,7 +56,7 @@
     <decklink>
       <device>2</device>
       <preroll>1</preroll>
-      <offset>-3</offset>
+      <offset>-2</offset>
     </decklink>
   </recorders>
   <controllers>
