--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -40,15 +40,18 @@
         </decklink>
       </input>
       <consumers>
-        <stream>
+        <!--<stream>
           <path>udp://224.0.0.1:5554</path>
           <acodec>aac</acodec>
           <vcodec>libx264</vcodec>
           <narrow>false</narrow>
           <options>tune=zerolatency,preset=veryfast</options>
-          <vrate>1024</vrate> <!--in kilobytes/s-->
-          <arate>128</arate>  <!--in kilobytes/s-->
-        </stream>
+          <vrate>1024</vrate> --><!--in kilobytes/s--><!--
+          <arate>128</arate>  --><!--in kilobytes/s--><!--
+        </stream>-->
+        <ndi>
+          <ndi-name>test_ndi</ndi-name>
+        </ndi>
       </consumers>
     </channel>
   </channels>
