added audio frames

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -50,7 +50,8 @@
           <arate>128</arate>  --><!--in kilobytes/s--><!--
         </stream>-->
         <ndi>
-          <ndi-name>test_ndi</ndi-name>
+          <name>test_ndi</name>
+          <groups></groups>
         </ndi>
       </consumers>
     </channel>
