--- a/shell/shell.vcxproj
+++ b/shell/shell.vcxproj
@@ -74,6 +74,9 @@
     <ProjectReference Include="..\modules\ndi\ndi.vcxproj">
       <Project>{F5771E03-EB2F-5AD6-01BC-E9DF79145329}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\modules\newtek\newtek.vcxproj">
+      <Project>{29ccb0c0-a1b7-4c05-bfec-486c9a0b78ce}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\modules\oal\oal.vcxproj">
       <Project>{82ed7ed6-8a15-40ec-a8af-f5e712e0da68}</Project>
     </ProjectReference>
