--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -26,7 +26,8 @@
             <device>2</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
-            <!--<buffer-depth>4</buffer-depth>-->-->
+            <buffer-depth>4</buffer-depth>
+            <latency>normal</latency>
           </decklink>
         </consumers>
     </channel>
@@ -49,10 +50,10 @@
           <vrate>1024</vrate> --><!--in kilobytes/s--><!--
           <arate>128</arate>  --><!--in kilobytes/s--><!--
         </stream>-->
-        <ndi>
+        <!--<ndi>
           <name>test_ndi</name>
           <groups></groups>
-        </ndi>
+        </ndi>-->
       </consumers>
     </channel>
   </channels>
