added 16-bit audio and dynamic load of NDI library

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -50,10 +50,10 @@
           <vrate>1024</vrate> --><!--in kilobytes/s--><!--
           <arate>128</arate>  --><!--in kilobytes/s--><!--
         </stream>-->
-        <!--<ndi>
+        <ndi>
           <name>test_ndi</name>
           <groups></groups>
-        </ndi>-->
+        </ndi>
       </consumers>
     </channel>
   </channels>
