added buffer alignment to FFmpeg rescaler

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -53,6 +53,7 @@
         <ndi>
           <name>test_ndi</name>
           <groups></groups>
+          <scale>1.0</scale>
         </ndi>
       </consumers>
     </channel>
