--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -64,7 +64,12 @@
       <preroll>1</preroll>
       <offset>2</offset>
     </decklink>
- </recorders>
+    <decklink>
+      <device>1</device>
+      <preroll>1</preroll>
+      <offset>2</offset>
+    </decklink>
+  </recorders>
   <controllers>
     <tcp>
         <port>5251</port>
