casparcg.config documentation

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -165,6 +165,11 @@
               <vrate>1024</vrate>               - video bitrate in kilobytes/s
               <arate>128</arate>                - audio bitrate in kilobytes/s
             </stream>
+            <ndi>
+              <name>name_of_ndi_source</name>   - name of source, required
+              <groups></groups>                 - comma-separated list of NDI groups, optional
+              <scale>1.0</scale>                - scale, usefull for preview, optional
+            </ndi>
         </consumers>
         <input>
            <layer>[0..]</layer>
@@ -175,6 +180,13 @@
       </input>
     </channel>
 </channels>
+<recorders>
+    <decklink>
+      <device>2</device>    - decklink device to connect to control VTR
+      <preroll>1</preroll>  - tape preroll, in seconds
+      <offset>2</offset>    - capture offset, in frames
+    </decklink>
+</recorders>
 <osc>
   <default-port>6250</default-port>
   <predefined-clients>
