fixed null reference exception on options_ in ffmpeg/consumer/ffmpeg_consumer.cpp. Cleaning code

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -23,7 +23,7 @@
         <channel-layout>stereo</channel-layout>
         <consumers>
           <decklink>
-            <device>2</device>
+            <device>1</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
             <buffer-depth>4</buffer-depth>
@@ -36,7 +36,7 @@
       <input>
         <layer>1</layer>
         <decklink>
-          <device>2</device>
+          <device>1</device>
           <timecode-source>serial</timecode-source>
         </decklink>
       </input>
@@ -49,21 +49,16 @@
           <options>tune=zerolatency,preset=veryfast</options>
           <vrate>1024</vrate> --><!--in kilobytes/s--><!--
           <arate>128</arate>  --><!--in kilobytes/s--><!--
-        </stream>-->
+        </stream>
         <ndi>
           <name>test_ndi</name>
           <groups></groups>
           <scale>1.0</scale>
-        </ndi>
+        </ndi> -->
       </consumers>
     </channel>
   </channels>
   <recorders>
-    <decklink>
-      <device>2</device>
-      <preroll>1</preroll>
-      <offset>2</offset>
-    </decklink>
     <decklink>
       <device>1</device>
       <preroll>1</preroll>
