NDI sending without alpha restored. ALPHA parameter added, defaults true

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -19,43 +19,29 @@
   </thumbnails>
   <channels>
     <channel>
-        <video-mode>PAL</video-mode>
+        <video-mode>1080i5000</video-mode>
         <channel-layout>stereo</channel-layout>
         <consumers>
           <decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
-            <buffer-depth>4</buffer-depth>
             <latency>normal</latency>
+            <buffer-depth>5</buffer-depth>
           </decklink>
+          <!--<stream>
+            <path>udp://224.0.0.1:5554</path>
+            <acodec>aac</acodec>
+            <vcodec>libx264</vcodec>
+            <narrow>false</narrow>
+            <options>tune=zerolatency,preset=veryfast</options>
+            <vrate>1024</vrate> 
+            <arate>128</arate>
+          </stream>-->
+          <ndi>
+            <name>PRV</name>
+          </ndi>
         </consumers>
-    </channel>
-    <channel>
-      <video-mode>PAL</video-mode>
-      <input>
-        <layer>1</layer>
-        <decklink>
-          <device>1</device>
-          <timecode-source>serial</timecode-source>
-        </decklink>
-      </input>
-      <consumers>
-        <!--<stream>
-          <path>udp://224.0.0.1:5554</path>
-          <acodec>aac</acodec>
-          <vcodec>libx264</vcodec>
-          <narrow>false</narrow>
-          <options>tune=zerolatency,preset=veryfast</options>
-          <vrate>1024</vrate> --><!--in kilobytes/s--><!--
-          <arate>128</arate>  --><!--in kilobytes/s--><!--
-        </stream>
-        <ndi>
-          <name>test_ndi</name>
-          <groups></groups>
-          <scale>1.0</scale>
-        </ndi> -->
-      </consumers>
     </channel>
   </channels>
   <recorders>
@@ -152,7 +138,7 @@
                 <borderless>false [true|false]</borderless>
             </screen>
             <stream>
-              <path>udp://127.0.0.1:5554</path> - only udp is supported
+              <path>udp://127.0.0.1:5554</path> - only udp was tested
               <acodec>aac</acodec>              - FFmpeg codec 
               <vcodec>libx264</vcodec>          - ...
               <narrow>false</narrow>            - aspect ratio in SD mode
@@ -163,7 +149,7 @@
             <ndi>
               <name>name_of_ndi_source</name>   - name of source, required
               <groups></groups>                 - comma-separated list of NDI groups, optional
-              <scale>1.0</scale>                - scale, usefull for preview, optional
+              <alpha>true [true|false]</alpha>  - if alpha channel will also be sending
             </ndi>
         </consumers>
         <input>
