added "blocking" parameter to NDI consumer

--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -19,16 +19,16 @@
   </thumbnails>
   <channels>
     <channel>
-        <video-mode>1080i5000</video-mode>
+        <video-mode>1080i5994</video-mode>
         <channel-layout>stereo</channel-layout>
         <consumers>
-          <decklink>
+          <!--<decklink>
             <device>1</device>
             <embedded-audio>true</embedded-audio>
             <keyer>default</keyer>
             <latency>normal</latency>
             <buffer-depth>5</buffer-depth>
-          </decklink>
+          </decklink>-->
           <!--<stream>
             <path>udp://224.0.0.1:5554</path>
             <acodec>aac</acodec>
@@ -151,6 +151,7 @@
               <name>name_of_ndi_source</name>   - name of source, required
               <groups></groups>                 - comma-separated list of NDI groups, optional
               <alpha>true [true|false]</alpha>  - if alpha channel will also be sending
+              <blocking>false [true|false]</blocking> - if consumer has its own frame clock (set to true only if it's main output)
             </ndi>
         </consumers>
         <input>
