--- a/shell/casparcg.config
+++ b/shell/casparcg.config
@@ -30,17 +30,21 @@
             <buffer-depth>5</buffer-depth>
           </decklink>-->
           <!--<stream>
-            <path>udp://224.0.0.1:5554</path>
-            <acodec>aac</acodec>
-            <vcodec>libx264</vcodec>
+            <path>udp://225.0.0.1:5554?pkt_size=1316&ttl=64</path>
+            <acodec>mp2</acodec>
+            <vcodec>h264_nvenc</vcodec>
             <narrow>false</narrow>
-            <options>tune=zerolatency,preset=veryfast</options>
-            <vrate>1024</vrate> 
-            <arate>128</arate>
+            <options>g=50,flags=+ilme+ildct,refs=1,bf=0,arate=192k,muxrate=5450k,rc=cbr,pcr_period=30,mpegts_pmt_start_pid=0x64,mpegts_start_pid=0x12c,mpegts_service_type=digital_tv</options>
+            <output-metadata>service_provider="IPTV",service_name="TV 1"</output-metadata>
+            <vrate>5000</vrate>
+            <arate>192</arate>
+            <audio_stream_id>300</audio_stream_id>
+            <video_stream_id>200</video_stream_id>
+            <pixel-format>yuv420p</pixel-format>
           </stream>-->
-          <ndi>
+          <!--<ndi>
             <name>PRV</name>
-          </ndi>
+          </ndi>-->
         </consumers>
     </channel>
 
@@ -146,6 +150,12 @@
               <options>coder=vlc</options>      - FFmpeg codecs and format specific options, name=value, comma as delimiter
               <vrate>1024</vrate>               - video bitrate in kilobytes/s
               <arate>128</arate>                - audio bitrate in kilobytes/s
+			  <pixel-format>yuv420p [...]</pixel-format> -pixel formats according to FFMpeg documentation
+              <audio_stream_id>1 [0..]</audio_stream_id>
+              <video_stream_id>0 [0..]</video_stream_id>
+              <output-metadata>service_provider="Provider name",service_name="Service name"</output-metadata>
+              <audio-metadata>language=en</audio-metadata>
+              <video-metadata></video-metadata>
             </stream>
             <ndi>
               <name>name_of_ndi_source</name>   - name of source, required
